--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -2,3 +2,21 @@
   height: 75px;
   width: 75px;
 }
+.cardWrap {
+  background-color: rgb(206, 196, 183);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  font-family: "Roboto", sans-serif;
+  height: 150px;
+  width: 150px;
+  margin: 20px;
+  border: solid 1px;
+  border-radius: 6px;
+}
+.cardWrap:hover {
+  transform: scale(1.05);
+  box-shadow: 5px 5px 5px;
+}
